--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description" content="Happy Birthday My Friend" />
+    <meta name="Description" content="Happy Birthday My Girl Friend" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Happy Birthday My Brother</title>
+    <title>Happy Birthday My Girl Friend</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -34,8 +34,8 @@
         <div class="container col-md-6 py-8 animate-bottom">
             <div class="card">
                 <div class="card-body">
-                    <p class="judul">Happy Birthday My Brother</p>
-                    <h2 class="subjudul">Adhitya Pangestu.</h2>
+                    <p class="judul">Happy Birthday My Girl Friend</p>
+                    <h2 class="subjudul">Salwa Khairun Nisa<3.</h2>
                     <hr>
 
                     <center>
@@ -92,7 +92,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" style="color: #D3F3EE;" id="exampleModalLongTitle">Special Wish For Adhitya Pangestu</h5>
+                        <h5 class="modal-title" style="color: #D3F3EE;" id="exampleModalLongTitle">Special Wish For Salwa Khairun Nisa</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -100,7 +100,7 @@
                     <div class="modal-body">
                         <p id="tekss">
                         </p>
-                        <br><br> ~Wafa Rifqi Anafin.
+                        <br><br> ~Gusti Yuda.
                     </div>
                     <audio id="lagu" src="assets/lagu/lagu.mp3" preload="auto">
 </audio>
@@ -135,7 +135,7 @@
     </script>
     <script>
         var i = 0;
-        var txt = "Kekuatan ucapan adalah sebagian dari doa, dan doa yang tulus akan selalu di kabulkan. Semoga di hari lahir lu ini akan membawa keberkahan dan kesuksesan di masa depan lu kelak, Aamiin. Selamat ulang tahun buat sahabat gua yang paling sabar";
+        var txt = "Save hari ini 28 Januari 2005 telah lahir wanita cantik yang bernama Salwa Khairun Nisa tepat pada hari ini yang bertambah usia ke 17 selamat menua sayang panjang umur semoga apa yang kamu impikan semoga tercapai yah sayang sekali lagi SELAMAT ULANG TAHUN SAYANG<3";
         var speed = 120;
 
         function Gassngetik() {
